--- a/snapshots/V0/sn63_0.md
+++ b/snapshots/V0/sn63_0.md
@@ -683,22 +683,5 @@
         - There is an equation:
             - formalized left hand side: 'Laplace-Transformation'('g(t)')
             - formalized right hand side: 'G(s)'
-
-
-- // snippet(64)
-- There is a general statement:
-    - full source code: 'Da die Übergangsfunktion  $h(t)$ (siehe Gl.~\eqref{eq:Uebergangsfunktion}) gerade das Integral über der Gewichtsfunktion ist, gilt für die Laplace-Transformierte der Übergangsfunktion wegen Regel 3 in Tabelle \ref{tab:LapalceRegeln}:
-      \begin{equation*}
-        H(s) = \frac{1}{s}G(s).
-      \end{equation*}'
-    - formalized setting:
-        - 'h(t)' is an instance of 'Übergangsfunktion'
-        - 'G(s)' is an instance of 'Übertragungsfunktion'
-        - 'H(s)' is an instance of 'komplexwertige Funktion'
-    - formalized assertion:
-        - There is an equation:
-            - full source code: '$H(s) = \frac{1}{s}G(s)$'
-            - source code of left hand side: 'H(s)'
-            - source code of right hand side: '$\frac{1}{s}G(s)$'
-            - formalized left hand side: 'H(s)'
-            - formalized right hand side: 'G(s)' / 's'
+- // I am not sure how to model the reference to rule 5 of table 'tab:LapalceRegeln'. It seems to be a justification for the statement. However, it is not clear to me how to represent this.
+- // I am not sure how to model the reference to equation 'eq:GewichtsFunktion'. It seems to be a reference to the definition of the Gewichtsfunktion. However, it is not clear to me how to represent this.
