--- a/snapshots/V0/sn64_0.md
+++ b/snapshots/V0/sn64_0.md
@@ -695,10 +695,11 @@
         - 'h(t)' is an instance of 'Übergangsfunktion'
         - 'G(s)' is an instance of 'Übertragungsfunktion'
         - 'H(s)' is an instance of 'komplexwertige Funktion'
+        - 'H(s)' beschreibt 'Ausgangssignal'
     - formalized assertion:
         - There is an equation:
             - full source code: '$H(s) = \frac{1}{s}G(s)$'
             - source code of left hand side: 'H(s)'
             - source code of right hand side: '$\frac{1}{s}G(s)$'
             - formalized left hand side: 'H(s)'
-            - formalized right hand side: 'G(s)' / 's'
+            - formalized right hand side: 'G(s)' / 's' 
