--- a/snapshots/V0/sn51_0.md
+++ b/snapshots/V0/sn51_0.md
@@ -379,7 +379,7 @@
 - // snippet(46i)
 - // ignored content
 - // snippet(47)
-- There is a unary operator 'Laplace-Transformation'
+- There is a class: 'Laplace-Transformation'
 - 'Laplace-Transformation' has the verbal description 'Dabei handelt es sich um eine spezielle Abbildung vom Raum der reellwertigen Funktionen  \(f : \mathbb{R} \to \mathbb{R}\) in den Raum der komplexwertigen Funktionen  \(F : \mathbb{C} \to \mathbb{C}\)'
 - // I am not sure how to model 'Raum der ... Funktionen'. It seems to be a set of functions. However, I do not know how to represent this.
 - There is an equation:
@@ -403,7 +403,6 @@
 - '\(\omega\)' is an instance of 'real numbers'
 
 - // snippet(49)
-- There is a unary operator 'Laplace-Transformation'
 - 'Laplace-Transformation' has the alternative associated LaTeX notation '\(F(s) = \mathcal{L}\left\{f(t)\right\}\)'
 
 - // snippet(50)
@@ -411,24 +410,17 @@
 - 'Zeitbereich' has the alternative label 'time domain'
 - There is a class: 'Bildbereich'
 - 'Bildbereich' has the alternative label 'image domain'
-- 'reellwertige Funktion' is a subclass of 'Funktion'
-- 'komplexwertige Funktion' is a subclass of 'Funktion'
-- 'Zeitbereich' is associated to 'reellwertige Funktion'
-- 'Bildbereich' is associated to 'komplexwertige Funktion'
-
-- The type of argument1 of 'Laplace-Transformation' is 'reellwertige Funktion'.
-- The result type of 'Laplace-Transformation' is 'komplexwertige Funktion'.
+- 'Zeitbereich' is associated to 'reellwertigen Funktionen'
+- 'Bildbereich' is associated to 'komplexwertigen Funktionen'
 - // I am not sure how to model the relation between 'Zeitbereich' and 'reellwertigen Funktionen'. It seems that 'Zeitbereich' is a domain where 'reellwertigen Funktionen' are defined. However, it is not clear to me how to represent this.
 - // I am not sure how to model the relation between 'Bildbereich' and 'komplexwertigen Funktionen'. It seems that 'Bildbereich' is a domain where 'komplexwertigen Funktionen' are defined. However, it is not clear to me how to represent this.
 - // I am not sure how to model the relation between 'Zeitbereich' and 'Bildbereich'. It seems that 'Bildbereich' is the image of 'Zeitbereich' under the 'Laplace-Transformation'. However, it is not clear to me how to represent this.
 
 
+
+
+
 - // snippet(51)
-- There is a unary operator: 'Zeitableitung'
-- 'Zeitableitung' has the alternative label 'time derivative'
-- The type of argument1 of 'Zeitableitung' is 'reellwertige Funktion'
-- The result type of 'Zeitableitung' is 'reellwertige Funktion'
-- 'Zeitableitung' is associated to 'Zeitbereich'
 - There is an explanation:
     - verbal summary: 'It will soon become clear why such a seemingly complicated and initially unintuitive transformation is very advantageous for working with transfer elements. For this purpose, we will first consider a particularly practical property of the Laplace transform, namely the "effect" on the time derivative  \(\dot f\) of a function \(f\).'
     - related to: 'Laplace-Transformation'
@@ -442,263 +434,25 @@
       F^\ast(s)&=-f(0) + sF(s) = s \mathcal{L}\left\{f(t)\right\} - f(0).
     \end{align*}'
     - formalized setting:
-        - '\(f\)' is an instance of 'reellwertige Funktion'
-        - '\(f\)' is associated to 'Zeitbereich'
-        - '\(F\)' is an instance of 'komplexwertige Funktion'
-        - '\(F\)' is associated to 'Bildbereich'
-        - '\(F^\ast\)' is an instance of 'komplexwertige Funktion'
-        - '\(F^\ast\)' is associated to 'Bildbereich'
+        - '\(f\)' is an instance of 'Funktion'
+        - '\(F\)' is an instance of 'Funktion'
+        - '\(F^\ast\)' is an instance of 'Funktion'
     - formalized assertion:
         - There is an equation:
             - full source code: '\(F^\ast(s) = \int\limits_0^\infty \diff{f}{t}(t)\mathrm{e}^{-st}\df t\)'
             - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the integral.
         - There is an equation:
+            - full source code: '\(F^\ast(s) = \left[ \mathrm{e}^{-st} f(t) \right]_{t=0}^{t=\infty} - \int\limits_0^\infty f(t)(-s\mathrm{e}^{-st})\df t\)'
+            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the integral.
+        - There is an equation:
+            - full source code: '\(F^\ast(s)=-f(0) + s \int\limits_0^\infty f(t)\mathrm{e}^{-st}\df t\)'
+            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the integral.
+        - There is an equation:
+            - full source code: '\(F^\ast(s)=-f(0) + sF(s)\)'
+            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the function application.
+        - There is an equation:
             - full source code: '\(F^\ast(s) = s \mathcal{L}\left\{f(t)\right\} - f(0)\)'
             - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the Laplace transformation.
+- // I am not sure how to model the term 'Partielle Integration liefert'. It seems to be a justification for the following equation. However, it is not clear to me how to represent this justification.
+- // I am not sure how to model the term 'Wegen \eqref{eq:LaplaceHin} ergibt sich daraus'. It seems to be a justification for the following equation. However, it is not clear to me how to represent this justification.
 
-
-- // snippet(52)
-- There is an explanation:
-    - verbal summary: 'To avoid difficulties due to possible discontinuities in  \(t=0\) , the right-hand limit \(f(+0)\) is used instead of \(f(0)\)'
-    - related to: 'Laplace-Transformation'
-- There is an equation:
-    - full source code: '\(F^\ast(s)= \mathcal{L}(\dot f(t)) = -f(+0) + sF(s) = s \mathcal{L}\left\{f(t)\right\} - f(+0).\)'
-    - source code of left hand side: '\(F^\ast(s)\)'
-    - source code of right hand side: '\(s \mathcal{L}\left\{f(t)\right\} - f(+0)\)'
-    - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the Laplace transformation.
-    - reference: 'eq:LaplaceDiff'
-- 'eq:LaplaceDiff' is associated to 'Laplace-Transformation'
-
-
-
-- // snippet(53)
-- There is a binary operator 'höhere Zeitableitung'
-- 'höhere Zeitableitung' has the alternative label 'higher order time derivative'
-- The type of argument1 of 'höhere Zeitableitung' is 'reelwertige Funktion'
-- The type of argument2 of 'höhere Zeitableitung' is 'integer'
-- The result type of 'höhere Zeitableitung' is 'reelwertige Funktion'
-- 'höhere Zeitableitung' is associated to 'Zeitbereich'
-- There is a general statement:
-    - full source code: '\RstBox{Diese Gleichung lässt sich für höhere Ableitungen von $f$ verallgemeinern:
-    \begin{equation}
-      \mathcal{L}\left\{f^{(i)}(t)\right\} = s^i \mathcal{L}\left\{f(t)\right\} - s^{i-1} f(+0) - s^{i-2} \dot f(+0) - \ldots - f^{i-1}(+0). \label{eq:LaplaceDiffAllgemein}
-    \end{equation}}'
-    - formalized setting:
-        - // Not sure how to model 'höhere Ableitungen'. It seems to imply that 'i' should be greater than 1 in this case.
-        - 'i' is instance of 'integer number'
-    - formalized assertion:
-        - There is an equation:
-            - full source code: '\(\mathcal{L}\left\{f^{(i)}(t)\right\} = s^i \mathcal{L}\left\{f(t)\right\} - s^{i-1} f(+0) - s^{i-2} \dot f(+0) - \ldots - f^{i-1}(+0)\)'
-            - source code of left hand side: '\(\mathcal{L}\left\{f^{(i)}(t)\right\}\)'
-            - source code of right hand side: '\(s^i \mathcal{L}\left\{f(t)\right\} - s^{i-1} f(+0) - s^{i-2} \dot f(+0) - \ldots - f^{i-1}(+0)\)'
-            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the Laplace transformation and the repeated subtraction.
-            - reference: 'eq:LaplaceDiffAllgemein'
-        - 'eq:LaplaceDiffAllgemein' is associated to 'Laplace-Transformation'
-
-- // snippet(54)
-- There is a relation 'has initial condition'.
-- The type of argument1 of 'has initial condition' is 'Funktion'.
-- The result type of 'has initial condition' is 'real numbers'.
-- There is an if-then statement:
-    - full source code: 'Betrachtet man nun erneut die (lineare) Differenzialgleichung \eqref{eq:DglAllgemeinLinear} und wendet die Regel \eqref{eq:LaplaceDiffAllgemein} unter der Annahme an, dass sämtliche Anfangswerte Null sind, so erhält man:
-    \begin{multline} \label{eq:DglAllgemeinLinearBildbereich}
-      a_n s^nV(s) + a_{n-1}s^{n-1}V(s) + \ldots + a_2 s^2 V(s) + a_1 s V(s) + a_0 V(s) = \\ b_m s^{m} + U(s) b_{m-1} s^{m-1}U(s) + \ldots + b_2 s^2 U(s) + b_1 s U(s) + b_0 U(s).
-    \end{multline}'
-    - formalized setting:
-        - 'v(t)' is an instance of 'reelwertige Funktion'
-        - 'u(t)' is an instance of 'reelwertige Funktion'
-        - 'V(s)' is an instance of 'komplexwertige Funktion'
-        - 'U(s)' is an instance of 'komplexwertige Funktion'
-    - formalized premise:
-        - 'v(t)' has initial condition '0'.
-        - 'u(t)' has initial condition '0'.
-    - formalized assertion:
-        - There is an equation:
-            - full source code: '\(a_n s^nV(s) + a_{n-1}s^{n-1}V(s) + \ldots + a_2 s^2 V(s) + a_1 s V(s) + a_0 V(s) = \\ b_m s^{m} + U(s) b_{m-1} s^{m-1}U(s) + \ldots + b_2 s^2 U(s) + b_1 s U(s) + b_0 U(s).\)'
-            - source code of left hand side: '\(a_n s^nV(s) + a_{n-1}s^{n-1}V(s) + \ldots + a_2 s^2 V(s) + a_1 s V(s) + a_0 V(s)\)'
-            - source code of right hand side: '\(b_m s^{m} + U(s) b_{m-1} s^{m-1}U(s) + \ldots + b_2 s^2 U(s) + b_1 s U(s) + b_0 U(s)\)'
-            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the repeated addition.
-            - reference: 'eq:DglAllgemeinLinearBildbereich'
-        - 'eq:DglAllgemeinLinearBildbereich' is associated to 'Laplace-Transformation'
-
-
-- // snippet(55)
-- There is an explanation:
-    - verbal summary: 'Formally, the  \(i\) -th derivative of the function  \(y(t)\) is to be replaced by  \(s^i Y(s)\) and the  \(j\) -th derivative of the function  \(u(t)\) by  \(s^j U(s)\).'
-    - related to: 'Laplace-Transformation'
-- There is a general statement:
-    - formalized setting:
-        - 'y(t)' is an instance of 'reelwertige Funktion'
-        - 'i' is an instance of 'integer'
-        - 'Y(s)' is an instance of 'komplexwertige Funktion'
-        - There is an equation:
-            - formalized left hand side: 'Laplace-Transformation'(y(t))
-            - formalized right hand side: Y(s)
-    - formalized assertion
-        - There is an equation
-            - formalized left hand side: 'Laplace-Transformation'('höhere Zeitableitung'(y(t), i))
-            - formalized right hand side: s^i * Y(s)
-- There is an equation:
-    - full source code: '\((a_n s^n + a_{n-1}s^{n-1} + \ldots + a_2 s^2 + a_1 s + a_0) V(s) = \\ (b_m s^{m} + b_{m-1} s^{m-1} + \ldots + b_2 s^2 + b_1 s + b_0) U(s).\)'
-    - source code of left hand side: '\((a_n s^n + a_{n-1}s^{n-1} + \ldots + a_2 s^2 + a_1 s + a_0) V(s)\)'
-    - source code of right hand side: '\((b_m s^{m} + b_{m-1} s^{m-1} + \ldots + b_2 s^2 + b_1 s + b_0) U(s)\)'
-    - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the repeated addition.
-    - reference: 'eq:DglAllgemeinLinearBildbereichZusammengefasst'
-- 'eq:DglAllgemeinLinearBildbereichZusammengefasst' is associated to 'Laplace-Transformation'
-
-- // snippet(56i)
-- // ignored content
-
-- // snippet(57)
-- // The following table contains important rules for the Laplace transformation. I will model each row of the table as a separate statement.
-- There is a general statement:
-    - full source code: '$f(t)$    &$F(s)$   &Transformation gemäß Gl.~\eqref{eq:LaplaceHin}'
-    - formalized setting:
-        - 'f(t)' is an instance of 'reelwertige Funktion'
-        - 'F(s)' is an instance of 'komplexwertige Funktion'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'Laplace-Transformation'('f(t)')
-            - formalized right hand side: 'F(s)'
-- There is a general statement:
-    - full source code: '$f^{(i)}(t)$ &$s^i F(s) - \sum\limits_{j=0}^{i-1}s^{i-1-j} f^{(j)}(+0)$ &Ableitung im Zeitbereich'
-    - formalized setting:
-        - 'f(t)' is an instance of 'reelwertige Funktion'
-        - 'F(s)' is an instance of 'komplexwertige Funktion'
-        - 'i' is an instance of 'integer number'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'Laplace-Transformation'('höhere Zeitableitung'('f(t)', 'i'))
-            - formalized right hand side: 's'^'i' * 'F(s)' - sum(j=0, i-1, 's'^(i-1-j) * 'f'^(j)(+0))
-            - // I am not sure how to model the sum in a formalized way.
-- There is a general statement:
-    - full source code: '$\int\limits_0^t f(\tau)\df\tau$ &$\frac{1}{s}F(s)$ &Integration im Zeitbereich'
-    - formalized setting:
-        - 'f(t)' is an instance of 'reelwertige Funktion'
-        - 'F(s)' is an instance of 'komplexwertige Funktion'
-    - formalized assertion:
-        - // Not sure how to model 'Integration im Zeitbereich'
-        - There is an equation:
-            - // Not sure how to model the left hand side in a formalized way.
-            - formalized right hand side: 'F(s)' / 's'
-- There is a general statement:
-    - full source code: '$f(t-\tau)$,\newline \small $\tau > 0$, $f(t) = 0$ f.~$t < 0$ &$F(s) \mathrm{e}^{-s\tau}$ &Verschiebung nach rechts'
-    - formalized setting:
-        - 'f(t)' is an instance of 'reelwertige Funktion'
-        - 'F(s)' is an instance of 'komplexwertige Funktion'
-        - '\(\tau\)' is an instance of 'real numbers'
-    - formalized premise:
-        - AND
-            - '\(\tau\)' > 0
-            - t < 0
-            - There is an equation:
-                - formalized left hand side: 'f(t)'
-                - formalized right hand side: 0
-    - formalized assertion:
-        - // Not sure how to model 'Verschiebung nach rechts'
-        - There is an equation:
-            - formalized left hand side: 'Laplace-Transformation'('f(t - \(\tau\))')
-            - formalized right hand side: 'F(s)' * 'e'^(-'s' * '\(\tau\)')
-- There is a general statement:
-    - full source code: '$\int\limits_0^t f(\tau) g(t - \tau) \df\tau$ &$F(s) \cdot G(s)$ &Faltung im Zeitbereich'
-    - formalized setting:
-        - 'f(t)' is an instance of 'reelwertige Funktion'
-        - 'F(s)' is an instance of 'komplexwertige Funktion'
-        - 'g(t)' is an instance of 'reelwertige Funktion'
-        - 'G(s)' is an instance of 'komplexwertige Funktion'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'Laplace-Transformation'('Faltung'('f(t)', 'g(t)'))
-            - formalized right hand side: 'F(s)' * 'G(s)'
-- // I am not sure how to model 'Transformation gemäß Gl.~\eqref{eq:LaplaceHin}' in the first row. It seems to be a reference to the definition of the Laplace transformation. However, it is not clear to me how to represent this.
-- // I am not sure how to model 'Ableitung im Zeitbereich' in the second row, 'Integration im Zeitbereich' in the third row and 'Verschiebung nach rechts' in the fourth row. They seem to be properties of the Laplace transformation. However, it is not clear to me how to represent these properties.
-- // I am not sure how to model the sum in the second row in a formalized way.
-- // I am not sure how to model the integral in the third row in a formalized way.
-
-- // snippet(58i)
-- // ignored content
-- // snippet(59)
-- New subsection: 'Übertragungsfunktion'
-
-- // snippet(60)
-- There is a general statement:
-    - full source code: 'Die in Gl.~\eqref{eq:DglAllgemeinLinearBildbereichZusammengefasst} vorliegende Darstellung der Dgl.~\eqref{eq:DglAllgemeinLinear} lässt sich unter der Annahme, dass alle Anfangsbedingungen null sind, zu folgender gebrochen rationalen Funktion in  \(s\) umformen:
-    \begin{equation} \label{eq:UebertragungsfunktionAllgemein}
-      G(s) := \frac{V(s)}{U(s)} = \frac{b_m s^{m} + b_{m-1} s^{m-1} + \ldots + b_2 s^2 + b_1 s + b_0}{a_n s^n + a_{n-1}s^{n-1} + \ldots + a_2 s^2 + a_1 s + a_0}.
-    \end{equation}'
-    - formalized setting:
-        - 'v(t)' is an instance of 'reelwertige Funktion'
-        - 'u(t)' is an instance of 'reelwertige Funktion'
-        - 'V(s)' is an instance of 'komplexwertige Funktion'
-        - 'U(s)' is an instance of 'komplexwertige Funktion'
-        - 'v(t)' has initial condition '0'.
-        - 'u(t)' has initial condition '0'.
-    - formalized assertion:
-        - There is an equation:
-            - full source code: '\(G(s) := \frac{V(s)}{U(s)} = \frac{b_m s^{m} + b_{m-1} s^{m-1} + \ldots + b_2 s^2 + b_1 s + b_0}{a_n s^n + a_{n-1}s^{n-1} + \ldots + a_2 s^2 + a_1 s + a_0}\)'
-            - source code of left hand side: '\(G(s)\)'
-            - source code of right hand side: '\(\frac{b_m s^{m} + b_{m-1} s^{m-1} + \ldots + b_2 s^2 + b_1 s + b_0}{a_n s^n + a_{n-1}s^{n-1} + \ldots + a_2 s^2 + a_1 s + a_0}\)'
-            - // I cannot generate the formalized left hand side and formalized right hand side because I do not know how to represent the fractions and the repeated addition.
-            - reference: 'eq:UebertragungsfunktionAllgemein'
-- // I am not sure how to model 'gebrochen rationale Funktion in \(s\)'. It seems to be a property of the function G(s). However, it is not clear to me how to represent this property.
-
-- // snippet(61)
-- There is a class: 'Übertragungsfunktion'
-- 'Übertragungsfunktion' has the alternative label 'transfer function'
-- 'Übertragungsfunktion' has the associated LaTeX notation  'G(s)'
-- 'Übertragungsfunktion' has the verbal description 'Diesen Ausdruck bezeichnet man als \emph{Übertragungsfunktion} des durch die Dgl.~\eqref{eq:DglAllgemeinLinear} beschriebenen linearen Übertragungsgliedes.'
-- 'Übertragungsfunktion' is associated to 'lineare Übertragungsglieder'
-- // I am not sure how to model the reference to the equation with label 'eq:DglAllgemeinLinear'. It seems to state that the 'Übertragungsfunktion' is defined by this equation. However, it is not clear to me how to represent this.
-- 'eq:UebertragungsfunktionAllgemein' is associated to 'Übertragungsfunktion'
-
-
-- // for the formalized expression, the following symbols are allowed: + (addition), - (subtraction), * (multiplication), / (division), ^ (power)
-- // snippet(62)
-- There is a general statement:
-    - full source code: 'Offensichtlich gilt:
-    \begin{equation*}
-      V(s) = G(s) U(s).
-    \end{equation*}'
-    - formalized setting:
-        - 'V(s)' is an instance of 'komplexwertige Funktion'
-        - 'V(s)' beschreibt Ausgangssignal
-        - 'G(s)' is an instance of 'Übertragungsfunktion'
-        - 'U(s)' is an instance of 'komplexwertige Funktion'
-        - 'U(s)' beschreibt Eingangssignal
-    - formalized assertion:
-        - There is an equation:
-            - full source code: 'V(s) = G(s) U(s)'
-            - source code of left hand side: 'V(s)'
-            - source code of right hand side: 'G(s) U(s)'
-            - formalized left hand side: 'V(s)'
-            - formalized right hand side: 'G(s)' * 'U(s)'
-
-- // snippet(63)
-- There is a general statement:
-    - full source code: 'Wegen Regel 5 in Tabelle \ref{tab:LapalceRegeln} folgt daraus: Die Übertragungsfunktion  \(G(s)\) ist die Laplace-Transformierte der Gewichtsfunktion  \(g(t)\) (siehe Gl.~\eqref{eq:GewichtsFunktion}).'
-    - formalized setting:
-        - 'G(s)' is an instance of 'Übertragungsfunktion'
-        - 'g(t)' is an instance of 'Gewichtsfunktion'
-    - formalized assertion:
-        - There is an equation:
-            - formalized left hand side: 'Laplace-Transformation'('g(t)')
-            - formalized right hand side: 'G(s)'
-
-
-- // snippet(64)
-- There is a general statement:
-    - full source code: 'Da die Übergangsfunktion  $h(t)$ (siehe Gl.~\eqref{eq:Uebergangsfunktion}) gerade das Integral über der Gewichtsfunktion ist, gilt für die Laplace-Transformierte der Übergangsfunktion wegen Regel 3 in Tabelle \ref{tab:LapalceRegeln}:
-      \begin{equation*}
-        H(s) = \frac{1}{s}G(s).
-      \end{equation*}'
-    - formalized setting:
-        - 'h(t)' is an instance of 'Übergangsfunktion'
-        - 'G(s)' is an instance of 'Übertragungsfunktion'
-        - 'H(s)' is an instance of 'komplexwertige Funktion'
-    - formalized assertion:
-        - There is an equation:
-            - full source code: '$H(s) = \frac{1}{s}G(s)$'
-            - source code of left hand side: 'H(s)'
-            - source code of right hand side: '$\frac{1}{s}G(s)$'
-            - formalized left hand side: 'H(s)'
-            - formalized right hand side: 'G(s)' / 's'
